# controlpad

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
controlpad/: __init__.py  gamepad.py  mappers.py  session.py
controlpad/backends/: __init__.py  base.py  evdev_backend.py  pygame_backend.py
controlpad/profiles/: __init__.py  base.py
examples/: basic_polling.py  custom_profile.py  drone_control.py  event_driven.py  recording_playback.py
publish_env/: pyvenv.cfg
tests/: conftest.py  test_filters.py  test_gamepad.py  test_mappers.py  test_profiles.py  test_session.py
